--- a/app/javascript/flavours/glitch/styles/gts/colors.scss
+++ b/app/javascript/flavours/glitch/styles/gts/colors.scss
@@ -38,6 +38,10 @@
     --color-ui-base: ;
     --color-ui-bg: ;
 
+    /* Badge */
+    --color-badge-bg: #5758ff;
+    --color-badge-fg: var(--color-fg);
+
     /* Button */
     --color-button-fg-destructive: red;
 
